correcting table overflow on mobile

--- a/gym/css/style.css
+++ b/gym/css/style.css
@@ -6607,4 +6607,14 @@ h6 {
 
 .classtime-table {
   overflow-x: scroll; //horizontal
+  -ms-overflow-style: none;
+}
+
+.classtime-table::-webkit-scrollbar {
+  display: none;
+}
+
+ body, html {
+   /* width: 100%; */
+  overflow-x: hidden !important;
 }
